[gd_scene load_steps=24 format=3 uid="uid://bwoy6eg0wquu0"]

[ext_resource type="Script" path="res://Player/player.gd" id="1_fdhj2"]
[ext_resource type="Texture2D" uid="uid://bockas6exwnol" path="res://art/player.png" id="1_mk14k"]
[ext_resource type="Resource" uid="uid://cjd1qabtpcbsj" path="res://inventory/playerInventory.tres" id="2_wxyk2"]
[ext_resource type="Script" path="res://Player/weapon.gd" id="4_m11lb"]
[ext_resource type="Script" path="res://Player/sprite_2d.gd" id="5_1sud5"]
[ext_resource type="Script" path="res://Player/interaction_comp.gd" id="6_ehf1e"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_88lt4"]
size = Vector2(14, 4)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_mmbkk"]

[sub_resource type="Animation" id="Animation_anb11"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("weapon:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [2.0944]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("weapon:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(8, 5)]
}

[sub_resource type="Animation" id="Animation_v7gkm"]
resource_name = "attackDown"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("weapon:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [2.0944, 4.18879]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("weapon:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(8, 5), Vector2(0, 8), Vector2(-8, 5)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame_coords")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 4)]
}

[sub_resource type="Animation" id="Animation_6uowy"]
resource_name = "attackLeft"
length = 0.23
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("weapon:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.23),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [1.0472, 0.0, -1.22173, -1.5708]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("weapon:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.23),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(5, -7), Vector2(0, -8), Vector2(-7, 1), Vector2(-7, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame_coords")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(2, 4)]
}

[sub_resource type="Animation" id="Animation_5ke5o"]
resource_name = "attackRight"
length = 0.23
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("weapon:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.23),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [-1.0472, 0.0, 1.22173, 1.5708]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("weapon:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.23),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(-5, -7), Vector2(0, -8), Vector2(7, 1), Vector2(7, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame_coords")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(3, 4)]
}

[sub_resource type="Animation" id="Animation_a142y"]
resource_name = "attackUp"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("weapon:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [-1.0472, 0.0, 1.0472]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("weapon:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(-5, -7), Vector2(0, -8), Vector2(5, -7)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame_coords")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(1, 4)]
}

[sub_resource type="Animation" id="Animation_nm7pv"]
resource_name = "walkDown"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(0, 1), Vector2i(0, 2), Vector2i(0, 3)]
}

[sub_resource type="Animation" id="Animation_icja4"]
resource_name = "walkLeft"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(2, 0), Vector2i(2, 1), Vector2i(2, 2), Vector2i(2, 3)]
}

[sub_resource type="Animation" id="Animation_ks6mx"]
resource_name = "walkRight"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(3, 0), Vector2i(3, 1), Vector2i(3, 2), Vector2i(3, 3)]
}

[sub_resource type="Animation" id="Animation_t3r5c"]
resource_name = "walkUp"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(1, 0), Vector2i(1, 1), Vector2i(1, 2), Vector2i(1, 3)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xmqov"]
_data = {
"RESET": SubResource("Animation_anb11"),
"attackDown": SubResource("Animation_v7gkm"),
"attackLeft": SubResource("Animation_6uowy"),
"attackRight": SubResource("Animation_5ke5o"),
"attackUp": SubResource("Animation_a142y"),
"walkDown": SubResource("Animation_nm7pv"),
"walkLeft": SubResource("Animation_icja4"),
"walkRight": SubResource("Animation_ks6mx"),
"walkUp": SubResource("Animation_t3r5c")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s23dj"]
size = Vector2(14, 15)

[sub_resource type="Animation" id="Animation_ryxq6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_op3qg"]
resource_name = "hurtBlink"
length = 0.4
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 0, 0, 0.501961), Color(1, 1, 1, 0.501961)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_youjl"]
_data = {
"RESET": SubResource("Animation_ryxq6"),
"hurtBlink": SubResource("Animation_op3qg")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_1wydu"]
radius = 11.0

[node name="Player" type="CharacterBody2D"]
z_index = 1
y_sort_enabled = true
position = Vector2(0, -7)
collision_layer = 9
script = ExtResource("1_fdhj2")
inventory = ExtResource("2_wxyk2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
z_index = 1
position = Vector2(0, 4)
shape = SubResource("RectangleShape2D_88lt4")

[node name="Sprite2D" type="Sprite2D" parent="."]
clip_children = 2
material = SubResource("ShaderMaterial_mmbkk")
position = Vector2(0, 6)
texture = ExtResource("1_mk14k")
offset = Vector2(0, -8)
hframes = 4
vframes = 7
script = ExtResource("5_1sud5")

[node name="ColorRect" type="ColorRect" parent="Sprite2D"]
offset_left = -19.0
offset_top = -26.0
offset_right = 21.0
offset_bottom = 14.0
color = Color(1, 0, 0, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_xmqov")
}

[node name="hurtBox" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurtBox"]
position = Vector2(0, -2.5)
shape = SubResource("RectangleShape2D_s23dj")

[node name="Effects" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_youjl")
}

[node name="hurtTimer" type="Timer" parent="."]
one_shot = true

[node name="weapon" type="Node2D" parent="."]
position = Vector2(8, 5)
rotation = 2.0944
script = ExtResource("4_m11lb")

[node name="InteractionComp" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16
script = ExtResource("6_ehf1e")

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionComp"]
shape = SubResource("CircleShape2D_1wydu")

[connection signal="area_entered" from="hurtBox" to="." method="_on_hurt_box_area_entered"]
[connection signal="area_exited" from="hurtBox" to="." method="_on_hurt_box_area_exited"]
[connection signal="body_entered" from="InteractionComp" to="InteractionComp" method="_on_body_entered"]
[connection signal="body_exited" from="InteractionComp" to="InteractionComp" method="_on_body_exited"]
